style: add scrollbar styles

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,3 +7,19 @@
 body {
   @apply dark:text-white font-serif bg-gray-100 dark:bg-gray-800;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #ffffff00;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
